--- a/themes/liva-hugo/layouts/_default/list.html
+++ b/themes/liva-hugo/layouts/_default/list.html
@@ -19,7 +19,7 @@
                 <a href="{{ .Permalink }}" class="h5 d-block my-3">{{ .Title | markdownify }}</a>
                 <div class="mb-3"><span>By {{ .Site.Params.Author }}</span> <span
                     class="border-bottom border-primary px-2 mx-1"></span>
-                  <span>{{ .PublishDate.Format "Updated on January 02 2006" }}</span></div>
+                  <span>{{ .PublishDate.Format "Updated January 02 2006" }}</span></div>
                 <p class="card-text">{{ .Summary }}</p>
                 <a href="{{ .Permalink }}" class="btn btn-outline-primary">read more</a>
               </div>
