--- a/themes/liva-hugo/layouts/_default/single.html
+++ b/themes/liva-hugo/layouts/_default/single.html
@@ -7,7 +7,7 @@
         <h2 data-toc-skip>{{ .Title | markdownify }}</h2>
         <div class="mb-3"> <span
             class="border-bottom border-primary px-2 mx-1"></span>
-          <span>{{ .PublishDate.Format "Updated January 02 2006" }}</span></div>
+          <span>{{ .PublishDate.Format "January 02 2006" }}</span></div>
         <center><img src="{{ .Params.Image | absURL }}" class="img-fluid w-75 mb-4" alt="{{ .Title | markdownify }}"></center>
         <div class="content mb-5">
           {{ .Content }}
