--- a/themes/liva-hugo/layouts/partials/footer.html
+++ b/themes/liva-hugo/layouts/partials/footer.html
@@ -36,7 +36,7 @@
         </ul>
       </div>
       <div class="col-lg-3 col-sm-6 mb-5">
-        <h6 data-toc-skip class="mb-4">Social Contacts</h6>
+        <h6 data-toc-skip class="mb-4">Social</h6>
         <ul class="list-unstyled">
           {{ range .Site.Params.social }}
           <li class="mb-3"><a class="text-dark" href="{{ .link | safeURL }}">{{ .title }}</a></li>
