--- a/themes/liva-hugo/layouts/partials/footer.html
+++ b/themes/liva-hugo/layouts/partials/footer.html
@@ -26,7 +26,7 @@
       <div class="col-12 text-center mb-5">
         <br><hr><br>
       </div>
-      <div class="col-lg-3 col-sm-6 mb-5">
+      <div class="col-lg-4 col-sm-6 mb-5">
         <h6 data-toc-skip class="mb-4">Contact Us</h6>
         <ul class="list-unstyled">
           <li class="mb-3"><i class="ti-location-pin mr-3 text-primary"></i>{{ .Site.Params.location }}</li>
@@ -35,16 +35,11 @@
           </li>
         </ul>
       </div>
-      <div class="col-lg-3 col-sm-6 mb-5">
-        <h6 data-toc-skip class="mb-4">Social</h6>
-        <ul class="list-unstyled">
-          {{ range .Site.Params.social }}
-          <li class="mb-3"><a class="text-dark" href="{{ .link | safeURL }}">{{ .title }}</a></li>
-          {{ end }}
-        </ul>
-      </div>
-      <div class="col-lg-3 col-sm-6 mb-5">
-        <h6 data-toc-skip class="mb-4">Categories</h6>
+
+      
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <center>
+        <h6 data-toc-skip class="mb-4">Topics</h6>
         {{- if isset .Site.Taxonomies "categories" }}
         {{- if not (eq (len .Site.Taxonomies.categories) 0) }}
         <ul class="list-unstyled">
@@ -56,14 +51,19 @@
         </ul>
         {{- end }}
         {{- end }}
+      </center>
       </div>
-      <div class="col-lg-3 col-sm-6 mb-5">
+      
+      
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <center>
         <h6 data-toc-skip class="mb-4">Quick Links</h6>
         <ul class="list-unstyled">
           {{ range .Site.Menus.footer }}
           <li class="mb-3"><a class="text-dark" href="{{ .URL | absURL }}">{{ .Name }}</a></li>
           {{ end }}
         </ul>
+        </center>
       </div>
       <div class="col-12 border-top py-4 text-center">
         {{ .Site.Params.copyright | markdownify }}
