Added portfolio link to footer menu

--- a/themes/liva-hugo/layouts/_default/list.html
+++ b/themes/liva-hugo/layouts/_default/list.html
@@ -36,7 +36,12 @@
           <h4 class="widget-title">{{ .Title | markdownify }}</h4>
           <img src="{{ .Params.Image | absURL }}" alt=""
             class="img-fluid author-thumb-sm d-block mx-auto rounded-circle mb-4">
-          <p>{{ .Summary }}</p>
+          <p>Welcome to Intelligence Refinery!
+          
+            <br><br>
+            
+            We are Nancy and Mihai Chelaru, two ex-neuroscientists venturing into this brave new world of data and code.</p>  
+
           {{ end }}
         </div>
         
