--- a/themes/liva-hugo/layouts/partials/footer.html
+++ b/themes/liva-hugo/layouts/partials/footer.html
@@ -62,6 +62,7 @@
           {{ range .Site.Menus.footer }}
           <li class="mb-3"><a class="text-dark" href="{{ .URL | absURL }}">{{ .Name }}</a></li>
           {{ end }}
+          <li><a class="text-dark" href='nancychelaru.rbind.io'>Nancy's portfolio</a></li>
         </ul>
         </center>
       </div>
