--- a/themes/liva-hugo/layouts/index.html
+++ b/themes/liva-hugo/layouts/index.html
@@ -66,7 +66,11 @@
           <h4 class="widget-title">{{  "About Us" | markdownify }}</h4>
           <img src="{{ .Params.Image | absURL }}" alt=""
             class="img-fluid author-thumb-lg d-block mx-auto mb-4">
-          <p>{{ .Summary }}</p>
+          <p>Welcome to Intelligence Refinery!
+          
+            <br><br>
+            
+            We are Nancy and Mihai Chelaru, two ex-neuroscientists venturing into this brave new world of data and code.</p>
           {{ end }}
         </div>
         <!-- category -->
