--- a/themes/liva-hugo/assets/scss/templates/_main.scss
+++ b/themes/liva-hugo/assets/scss/templates/_main.scss
@@ -322,6 +322,20 @@
       word-wrap: break-word;
   }
   
+  .css {
+    background: #ffffba; 
+    page-break-inside: avoid;
+    font-family: monospace;
+    font-size: 15px;
+    line-height: 1.6;
+    margin-bottom: 1.6em;
+    max-width: 100%;
+    overflow: auto;
+    padding: 1em 1.5em;
+    display: block;
+    word-wrap: break-word;
+} 
+  
   .plain {
       background: #ffffff; 
       border-color:  #cbd9e5;
