Expanded 'About' page

--- a/themes/liva-hugo/layouts/about/single.html
+++ b/themes/liva-hugo/layouts/about/single.html
@@ -12,9 +12,7 @@
       </div>
     </div>
   </div>
-</section>
-
-<section class="section-sm">
+  <br><br><br><br>
   <div class="container">
     <div class="row">
       <div class="col-lg-10 mx-auto text-center">
@@ -22,11 +20,15 @@
         
         <div class="content">
           
-          This site is created using the <code>blogdown</code> package. 
+          This site is created using <code>Blogdown</code> and hosted on Netlify.
           
           <br><br>
           
-          All the fantastic thumbnail images, unless attributed elsewhere, are made by <a href='https://icons8.com/'>Icons8</a>
+          The Hugo theme is Liva, created by <a href='https://themefisher.com/'>Themefisher</a>.
+          
+          <br><br>
+          
+          All the fantastic thumbnail images, unless attributed elsewhere, are made by <a href='https://icons8.com/'>Icons 8</a>
         </div>
       </div>
     </div>
