--- a/themes/liva-hugo/layouts/index.html
+++ b/themes/liva-hugo/layouts/index.html
@@ -66,11 +66,12 @@
           <h4 class="widget-title">{{  "About Us" | markdownify }}</h4>
           <img src="{{ .Params.Image | absURL }}" alt=""
             class="img-fluid author-thumb-lg d-block mx-auto mb-4">
-          <p>Welcome to Intelligence Refinery!
+          <p>Welcome to Intelligence Refinery, an ever growing and updating repository of useful tidbits for all things data science and software development!
           
-            <br><br>
-            
-            We are Nancy and Mihai Chelaru, two ex-neuroscientists venturing into this brave new world of data and code.</p>
+          <br><br>
+          
+          This site is curated by Nancy and Mihai Chelaru-Centea, two ex-neuroscientists who are venturing into this brave new world of data and code.
+          </p>
           {{ end }}
         </div>
         <!-- category -->
