Removed Bootstrap style sheet from posts with floating toc

--- a/themes/liva-hugo/layouts/partials/footer.html
+++ b/themes/liva-hugo/layouts/partials/footer.html
@@ -1,3 +1,10 @@
+<script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.16.2/build/highlight.min.js"></script>
+
+<script>
+hljs.configure({languages: []});
+hljs.initHighlightingOnLoad();
+</script>
+
 {{ if .Site.Params.newsletter.enable }}
 <section class="section-sm">
   <div class="container">
