--- a/themes/liva-hugo/layouts/partials/head.html
+++ b/themes/liva-hugo/layouts/partials/head.html
@@ -1,5 +1,9 @@
+<link rel="stylesheet"
+      href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.16.2/build/styles/default.min.css">
+
 <head>
   <meta charset="utf-8">
+  
   <title>{{ .Site.Title }}</title>
 
   {{ "<!-- mobile responsive meta -->" | safeHTML }}
