--- a/themes/liva-hugo/assets/scss/templates/_main.scss
+++ b/themes/liva-hugo/assets/scss/templates/_main.scss
@@ -272,6 +272,7 @@
     background: #ffffff; 
     border: 1px solid $border-color;
     border-radius: 3px;
+    font-size: 15px;
     color: $text-color-dark;
   }
  
