--- a/themes/liva-hugo/layouts/_default/list.html
+++ b/themes/liva-hugo/layouts/_default/list.html
@@ -17,7 +17,7 @@
                   class="text-primary">{{ . | title | humanize }}</a>
                 {{ end }}
                 <a href="{{ .Permalink }}" class="h5 d-block my-3">{{ .Title | markdownify }}</a>
-                <div class="mb-3"><span>By {{ .Site.Params.Author }}</span> <span
+                <div class="mb-3"><span
                     class="border-bottom border-primary px-2 mx-1"></span>
                   <span>{{ .PublishDate.Format "January 02 2006" }}</span></div>
                 <p class="card-text">{{ .Summary }}</p>
