--- a/themes/liva-hugo/layouts/index.html
+++ b/themes/liva-hugo/layouts/index.html
@@ -56,6 +56,8 @@
           </div>
           {{ end }}
         </div>
+      
+      {{ template "_internal/pagination.html" . }}
       </div>
       <!-- sidebar -->
       <div class="col-lg-4">
@@ -75,21 +77,6 @@
           {{ end }}
         </div>
         
-        <!-- tags -->
-        <br><br>
-        <div class="widget">
-          <h4 class="widget-title">Tags</h4>
-          {{- if isset .Site.Taxonomies "tags" }}
-          {{- if not (eq (len .Site.Taxonomies.tags) 0) }}
-          <ul class="list-inline">
-            {{- range $name, $items := .Site.Taxonomies.tags }}
-            <li class="list-inline-item"><a class="d-block p-2 bg-primary text-white"
-                href="{{ "tags/" | relLangURL }}{{ $name | urlize | lower }}">{{ $name | humanize }}</a></li>
-            {{- end }}
-          </ul>
-          {{- end }}
-          {{- end }}
-        </div>
         
         <!-- category -->
         <br><br>
@@ -105,17 +92,59 @@
           {{- end }}
           {{- end }}
         </div>
+        
+        
+      <!-- tags
+        <br><br>
+        <div class="widget">
+          <h4 class="widget-title">Tags</h4>
+          {{- if isset .Site.Taxonomies "tags" }}
+          {{- if not (eq (len .Site.Taxonomies.tags) 0) }}
+          <ul class="list-inline">
+            {{- range $name, $items := .Site.Taxonomies.tags }}
+            <li class="list-inline-item"><a class="d-block p-2 bg-primary text-white"
+                href="{{ "tags/" | relLangURL }}{{ $name | urlize | lower }}">{{ $name | humanize | upper }}</a></li>
+            {{- end }}
+          </ul>
+          {{- end }}
+          {{- end }}
+        </div>
+      -->
+        
+
 
         
       <!-- /sidebar -->
 
-      <!-- pagination -->
+      <!-- pagination
       <div class="col-12 mt-5">
         {{ template "_internal/pagination.html" . }}
       </div>
+      -->
     </div>
   </div>
+  
+  <div class="col-12 mt-5">
+      <!-- tags -->
+    <br><br>
+    <div class="widget">
+      <h4 class="widget-title">Tags</h4>
+      {{- if isset .Site.Taxonomies "tags" }}
+      {{- if not (eq (len .Site.Taxonomies.tags) 0) }}
+      <ul class="list-inline">
+        {{- range $name, $items := .Site.Taxonomies.tags }}
+        <li class="list-inline-item"><a class="d-block p-2 bg-primary text-white"
+            href="{{ "tags/" | relLangURL }}{{ $name | urlize | lower }}">{{ $name | humanize | upper }}</a></li>
+        {{- end }}
+      </ul>
+      {{- end }}
+      {{- end }}
+    </div>
+  </div>
+        
 </section>
 <!-- /blog post -->
+
+
 
 {{ end }}
