--- a/themes/liva-hugo/layouts/index.html
+++ b/themes/liva-hugo/layouts/index.html
@@ -86,7 +86,7 @@
           {{- if not (eq (len .Site.Taxonomies.categories) 0) }}
           <ul class="list-unstyled">
             {{- range $name, $items := .Site.Taxonomies.categories }}
-            <li><a href="{{ "categories/" | relLangURL }}{{ $name | urlize | lower }}">{{ $name | humanize }}</a></li>
+            <b><li><a href="{{ "categories/" | relLangURL }}{{ $name | urlize | lower }}">{{ $name | humanize }}</a></li></b>
             {{- end }}
           </ul>
           {{- end }}
@@ -101,8 +101,8 @@
           {{- if not (eq (len .Site.Taxonomies.tags) 0) }}
           <ul class="list-inline">
             {{- range $name, $items := .Site.Taxonomies.tags }}
-            <li class="list-inline-item"><a class="d-block p-2 bg-primary text-white"
-                href="{{ "tags/" | relLangURL }}{{ $name | urlize | lower }}">{{ $name | humanize | upper }}</a></li>
+            <font size="-1"><b><li class="list-inline-item"><a class="d-block p-2 bg-primary text-white"
+                href="{{ "tags/" | relLangURL }}{{ $name | urlize | lower }}">{{ $name | humanize | upper }}</a></li></b></font>
             {{- end }}
           </ul>
           {{- end }}
